force-app/main/default/objects/Opportunity_Quote__c/Opportunity_Quote__c.object-meta.xml
<CustomObject>
    <description>this is the quote</description>
    <label>Opportunity Quote</label>
    <nameField>
        <displayFormat>OQ-{0000000000}</displayFormat>
        <label>Opportunity Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>