force-app/main/default/objects/Opportunity_Quote__c/fields/All_Records_Inserted__c.field-meta.xml
<CustomField>
    <fullName>All_Records_Inserted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SP-2415 - checked when all quote line items and Tiers in the line items (if needed) have been inserted in the quote so we can fire the approval process</description>
    <label>All Records Inserted</label>
    <type>Checkbox</type>
</CustomField>