force-app/main/default/objects/Opportunity_Quote__c/fields/Approval_L1__c.field-meta.xml
<CustomField>
    <fullName>Approval_L1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval L1</label>
    <type>Checkbox</type>
</CustomField>