force-app/main/default/objects/Opportunity_Quote__c/fields/Approval_L2__c.field-meta.xml
<CustomField>
    <fullName>Approval_L2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval L2</label>
    <type>Checkbox</type>
</CustomField>