force-app/main/default/objects/Opportunity_Quote__c/fields/Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Needed__c</fullName>
    <label>Approval Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>