force-app/main/default/objects/Opportunity_Quote__c/fields/Approver_Action_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Action_Comments__c</fullName>
    <label>Approver Action Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>