force-app/main/default/objects/Opportunity_Quote__c/fields/Approver_L2__c.field-meta.xml
<CustomField>
    <fullName>Approver_L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver L2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>