force-app/main/default/objects/Opportunity_Quote__c/fields/Automate_quote_generation__c.field-meta.xml
<CustomField>
    <fullName>Automate_quote_generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automate quote generation</label>
    <type>Checkbox</type>
</CustomField>