force-app/main/default/objects/Opportunity_Quote__c/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <description>Capture DocuSign Declined Reason.</description>
    <label>Declined Reason</label>
    <length>470</length>
    <type>LongTextArea</type>
</CustomField>