force-app/main/default/objects/Opportunity_Quote__c/fields/Drawloop_Next_Text__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_Text__c</fullName>
    <label>Drawloop_Next_Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>