force-app/main/default/objects/Opportunity_Quote__c/fields/Id_Account__c.field-meta.xml
<CustomField>
    <fullName>Id_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this holds the account id</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Opportunity_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>