force-app/main/default/objects/Opportunity_Quote__c/fields/Id_Tarif__c.field-meta.xml
<CustomField>
    <fullName>Id_Tarif__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Tarif</label>
    <referenceTo>Tarif__c</referenceTo>
    <relationshipLabel>Opportunity Quotes</relationshipLabel>
    <relationshipName>Opportunity_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>