force-app/main/default/objects/Opportunity_Quote__c/fields/isReplacementQuote__c.field-meta.xml
<CustomField>
    <fullName>isReplacementQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReplacementQuote</label>
    <type>Checkbox</type>
</CustomField>