force-app/main/default/objects/Opportunity_Quote__c/fields/Items_Approval_Progress__c.field-meta.xml
<CustomField>
    <fullName>Items_Approval_Progress__c</fullName>
    <formula>IF(Items_Count__c &gt; 0, (Items_Approved__c + Items_Rejected__c ) /  Items_Count__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Items Approval Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>