force-app/main/default/objects/Opportunity_Quote__c/fields/Items_Approved__c.field-meta.xml
<CustomField>
    <fullName>Items_Approved__c</fullName>
    <label>Items Approved</label>
    <summaryFilterItems>
        <field>Opportunity_Quote_Line_Item__c.Approved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Quote_Line_Item__c.Id_Opportunity_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>