force-app/main/default/objects/Opportunity_Quote__c/fields/Items_Approved_Status__c.field-meta.xml
<CustomField>
    <fullName>Items_Approved_Status__c</fullName>
    <formula>TEXT( Items_Approved__c ) &amp; &apos; / &apos; &amp; TEXT( Items_Count__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Items Approved Status</label>
    <type>Text</type>
</CustomField>