force-app/main/default/objects/Opportunity_Quote__c/fields/Items_Count__c.field-meta.xml
<CustomField>
    <fullName>Items_Count__c</fullName>
    <label>Items Count</label>
    <summaryFilterItems>
        <field>Opportunity_Quote_Line_Item__c.Approver__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Quote_Line_Item__c.Id_Opportunity_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>