force-app/main/default/objects/Opportunity_Quote__c/fields/Items_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Items_Rejected__c</fullName>
    <label>Items Rejected</label>
    <summaryFilterItems>
        <field>Opportunity_Quote_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Quote_Line_Item__c.Id_Opportunity_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>