force-app/main/default/objects/Opportunity_Quote__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>this field holds the key for decoding</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>