force-app/main/default/objects/Opportunity_Quote__c/fields/National_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Id_Number__c</fullName>
    <label>National Id Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>