force-app/main/default/objects/Opportunity_Quote__c/fields/Non_Standard_Contract_Terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Contract_Terms__c</fullName>
    <label>Non Standard Contract Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>