force-app/main/default/objects/Opportunity_Quote__c/fields/Quote_Comment__c.field-meta.xml
<CustomField>
    <fullName>Quote_Comment__c</fullName>
    <description>Default comment that will be used when sending out emails</description>
    <label>Quote Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>