force-app/main/default/objects/Opportunity_Quote__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <description>Determines the quote type to be selected</description>
    <label>Quote Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>