force-app/main/default/objects/Opportunity_Quote__c/fields/SalesCloseDate__c.field-meta.xml
<CustomField>
    <fullName>SalesCloseDate__c</fullName>
    <label>SalesCloseDate</label>
    <type>Date</type>
</CustomField>