force-app/main/default/objects/Opportunity_Quote__c/fields/Total_fm__c.field-meta.xml
<CustomField>
    <fullName>Total_fm__c</fullName>
    <formula>SubTotalRF__c + VAT_fm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>