force-app/main/default/objects/Opportunity_Quote__c/fields/Url_Key__c.field-meta.xml
<CustomField>
    <fullName>Url_Key__c</fullName>
    <description>this holds the unique encrypted key for the record</description>
    <label>Url Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>