force-app/main/default/objects/Opportunity_Quote__c/fields/VAT_fm__c.field-meta.xml
<CustomField>
    <fullName>VAT_fm__c</fullName>
    <formula>CASE(Id_Opportunity__r.RecordType.DeveloperName, &quot;DH_AU_Opportunity&quot;, (SubTotalRF__c * 0.1), &quot;UK_Opportunity&quot;,(SubTotalRF__c * 0.2),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>