force-app/main/default/objects/Opportunity_Quote__c/recordTypes/AT_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>AT_Opportunity_Quote</fullName>
    <active>true</active>
    <label>AT Opportunity Quote</label>
</RecordType>