force-app/main/default/objects/Opportunity_Quote__c/recordTypes/CD_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>CD_Opportunity_Quote</fullName>
    <active>true</active>
    <label>CD Opportunity Quote</label>
</RecordType>