force-app/main/default/objects/Opportunity_Quote__c/recordTypes/CZ_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>CZ_Opportunity_Quote</fullName>
    <active>true</active>
    <description>Czech Republic Opportunity Quote</description>
    <label>CZ Opportunity Quote</label>
</RecordType>