force-app/main/default/objects/Opportunity_Quote__c/recordTypes/DE_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>DE_Opportunity_Quote</fullName>
    <active>true</active>
    <label>DE Opportunity Quote</label>
</RecordType>