force-app/main/default/objects/Opportunity_Quote__c/recordTypes/DH_AU_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Opportunity_Quote</fullName>
    <active>true</active>
    <label>DH AU Opportunity Quote</label>
</RecordType>