force-app/main/default/objects/Opportunity_Quote__c/recordTypes/FI_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>FI_Opportunity_Quote</fullName>
    <active>true</active>
    <label>FI Opportunity Quote</label>
</RecordType>