force-app/main/default/objects/Opportunity_Quote__c/recordTypes/FP_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>FP_Opportunity_Quote</fullName>
    <active>true</active>
    <label>FP Opportunity Quote</label>
</RecordType>