force-app/main/default/objects/Opportunity_Quote__c/recordTypes/HU_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>HU_Opportunity_Quote</fullName>
    <active>true</active>
    <description>Hungary Opportunity Quote</description>
    <label>HU Opportunity Quote</label>
</RecordType>