force-app/main/default/objects/Opportunity_Quote__c/recordTypes/PY_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>PY_Opportunity_Quote</fullName>
    <active>true</active>
    <label>PY Opportunity Quote</label>
</RecordType>