force-app/main/default/objects/Opportunity_Quote__c/recordTypes/SE_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>SE_Opportunity_Quote</fullName>
    <active>true</active>
    <label>SE Opportunity Quote</label>
</RecordType>