force-app/main/default/objects/Opportunity_Quote__c/recordTypes/Talabat_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Opportunity_Quote</fullName>
    <active>true</active>
    <label>Talabat Opportunity Quote</label>
</RecordType>