force-app/main/default/objects/Opportunity_Quote__c/recordTypes/UK_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>UK_Opportunity_Quote</fullName>
    <active>true</active>
    <label>UK Opportunity Quote</label>
</RecordType>