force-app/main/default/objects/Opportunity_Quote__c/recordTypes/Yogiyo_Opportunity_Quote.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Opportunity_Quote</fullName>
    <active>true</active>
    <label>Yogiyo Opportunity Quote</label>
</RecordType>