force-app/main/default/objects/Opportunity_Quote__c/listViews/Peru_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Peru_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Id_Account__c</columns>
    <columns>Id_Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Approver_Action_Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity_Quote__c.CD_Opportunity_Quote</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>PEN</value>
    </filters>
    <filters>
        <field>Id_Account__c</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>Peru - Pending Approval</label>
    <language>en_US</language>
    <sharedTo>
        <role>CD_Sales_Management_Peru</role>
        <role>CD_Sales_Team_Peru</role>
    </sharedTo>
</ListView>